--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "react": "^16.3.0-alpha.1",
+    "react-native-tab-navigator": "0.3.4",
     "react-native": "0.54.2"
   },
   "devDependencies": {
