--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.2",
-    "react-native-tab-navigator": "0.3.4",
     "react-navigation": "^1.5.8"
   },
   "devDependencies": {
