--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "axios": "^0.18.0",
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.2",
-    "react-navigation": "^1.5.8"
+    "react-navigation": "^1.5.8",
+    "react-native-easy-toast": "^1.1.0"
   },
   "devDependencies": {
     "babel-jest": "23.0.0-alpha.0",
