--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "crypto-js": "^3.1.9",
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.2",
     "react-navigation": "^1.5.8",
