--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "moment": "^2.21.0",
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.2",
-    "react-navigation": "^1.5.8",
-    "react-native-easy-toast": "^1.1.0"
+    "react-native-easy-toast": "^1.1.0",
+    "react-native-video": "^2.0.0",
+    "react-navigation": "^1.5.8"
   },
   "devDependencies": {
     "babel-jest": "23.0.0-alpha.0",
